--- a/templates/goods.html
+++ b/templates/goods.html
@@ -125,6 +125,7 @@ function showPic(){
     </label>
     <form onsubmit="return false" onchange="changePrice()">
       <div class="fields" style="display:block">
+        <input type="hidden" name="goods_id" value="{$goods_id}">
         <ul class="spec">
           {foreach from=$specification item=spec key=spec_key}
           <li>
@@ -230,7 +231,26 @@ changePrice();
 
 function addToCart(quick){
   var $form = $('.goodsBuy form')
-  console.log($form.serializeArray())
+  var formArray = $form.serializeArray()
+  var formData = formArray.reduce(function(memo, field){
+    memo[field.name] = field.value
+    return memo
+  }, {})
+  console.log(formData)
+
+  $.ajax({
+      type: 'POST',
+      async: false,
+      url: 'flow.php?step=add_to_cart',
+      data: formData,
+      success: function(response) {
+        if (quick) {
+          window.location.href = 'flow.php?step=cart'
+        } else {
+          alert('加入购物车成功')
+        }
+      }
+  })
 }
 
 function changePrice(){
