--- a/templates/order_list.html
+++ b/templates/order_list.html
@@ -55,6 +55,13 @@
       </tr> -->
     </tbody></table>
   </section>
+  {foreachelse}
+  <style>
+    .no_order { padding: 4px; text-align: center; }
+  </style>
+  <section class="order_box padd1 radius10 single_item" id="more_element_1">
+    <div class="no_order">暂时还没有订单</div>
+  </section>
   {/foreach}
 </section>
 
