--- a/templates/goods_list.html
+++ b/templates/goods_list.html
@@ -72,7 +72,7 @@
           </div>
           <div class="proSKU"></div>
           <div class="proPrice">
-            <em>{$goods.price}</em> 
+            <em>{$goods.price_formated}</em> 
           </div>
           <div class="proService">
             <del>{$goods.market_price}</del>
