--- a/templates/global_nav.html
+++ b/templates/global_nav.html
@@ -42,7 +42,7 @@
             <a href="flow.php?step=cart" class="global-nav__nav-link">
                 <i class="global-nav__iconfont global-nav__icon-shop-cart">&#xf0004;</i>
                 <span class="global-nav__nav-tit">{$lang.cart}</span>
-                <span class="global-nav__nav-shop-cart-num" id="carId">0</span>
+                <span class="global-nav__nav-shop-cart-num" id="carId">{$cart_count}</span>
             </a>
         </div>
         <div class="global-nav__nav-item">
@@ -55,7 +55,7 @@
     <div class="global-nav__operate-wrap">
         <!-- <span class="global-nav__yhd-logo">{$lang.menu}</span> -->
         <div class="global-nav__yhd-text">{$lang.menu}</div>
-        <span class="global-nav__operate-cart-num" id="globalId">0</span>
+        <span class="global-nav__operate-cart-num" id="globalId">{$cart_count}</span>
     </div>
 </div>
 <script>
