--- a/templates/goods.html
+++ b/templates/goods.html
@@ -141,7 +141,6 @@ function showPic(){
                 {/if}
               </label>
               {/foreach}
-              <input type="hidden" name="spec_list" value="{$key}" />
             {else}
               {foreach from=$spec.values item=value key=key}
               <input type="checkbox"
@@ -154,7 +153,6 @@ function showPic(){
                 {/if}
               </label>
               {/foreach}
-              <input type="hidden" name="spec_list" value="{$key}" />
             {/if}
           </li>
           {/foreach}
@@ -173,7 +171,7 @@ function showPic(){
             {$lang.quantity}{$lang.colon}
             <span class="ui-number radius5"> 
               <button type="button" class="decrease radius5" onclick="changenum(-1)">-</button>
-              <input class="num" name="number" id="goods_number" autocomplete="off" value="1" type="number" onchange="changenum(0)" />
+              <input class="num" name="goods_number" id="goods_number" autocomplete="off" value="1" type="number" onchange="changenum(0)" />
               <button type="button" class="increase radius5" onclick="changenum(1)">+</button>
             </span>
           </li>
@@ -277,7 +275,7 @@ jQuery(function($) {
 function changenum(diff) {
   var num = parseInt($('#goods_number').val())
   var next_num = num + Number(diff)
-  if (next_num < 1){
+  if (next_num < 1) {
     next_num = 1
   } else if (next_num > stock_number) {
     next_num = stock_number
