--- a/templates/head.html
+++ b/templates/head.html
@@ -17,6 +17,7 @@
     height: 3rem;
     overflow: hidden;
   }
+  body { overflow-x: hidden; }
 </style>
 
 <script src="js/jquery-2.1.1.min.js"></script>
