--- a/templates/user_register.html
+++ b/templates/user_register.html
@@ -26,7 +26,7 @@
     </div>
     <div class="bd">
       <div class="table_box">
-        <form action="user.php?act=act_register" method="post">
+        <form id="register_form">
           <input type="hidden" name="flag" id="flag" value="register" />
           <dl>
             <dd>
@@ -58,6 +58,25 @@
     </div>
   </div>
 </section>
+
+<script>
+  $(function(){
+    var $form = $('#register_form')
+    $form.on('submit', function(e){
+      e.preventDefault()
+      $.ajax({
+        type: 'post',
+        url: 'user.php?act=ajax_register',
+        dataType: 'json',
+        data: $form.serialize(),
+        success: function(ret){
+          if (ret.message) alert(ret.message)
+          if (ret.redirect) location = ret.redirect
+        }
+      })
+    })
+  })
+</script>
 
 {include file='foot.html'}
 </body>
